# VLMChat

./: .gitignore  ADAPTIVE_SCHEDULING_DESIGN.md  ARCHITECTURE_STATUS.md  CLA.md  CLIP_TESTING_RESULTS.md  CONFIG.md  CONTRIBUTING.md  IMAGE_LIBRARY_CAMERA_SUMMARY.md  INSTALL.md  LICENSE  MEMORY_MANAGEMENT_DESIGN.md  PIPELINE.md  PIPELINE_COMMANDS.md  README.md  SMOL_BATCH_GUIDE.md  ZERO_COPY_CAMERA_DESIGN.md  analyze_transfers.py  camera_framework_config.yaml  config.json  config_example.json  constraints-jetson.txt  constraints-pi.txt  demo_image_library_camera.py  diagnostic_task.py  justfile  macos_device_config.yaml  metrics.json  pyproject.toml  pytest.ini  requirements.txt  show_similarity_report.py  smol.py  smol_batch.py  system_prompt.txt  test_camera_yolo_clusterer_fashionclip.py  test_camera_yolo_clusterer_viewer.py  test_camera_yolo_viewer.py  test_clip_detection_pipeline.py  test_clip_execution.py  test_config.py  (+11 more)
.github/: CODEOWNERS  copilot-instructions.md
camera-framework/: BRIDGES.md  MEMORY_MONITORING.md  MQTT_VALIDATION.md  PIPELINE_VISUALIZATION.md  README.md  STATUS.md  pyproject.toml
camera-framework/camera_framework/: __init__.py  buffer.py  config.py  detection.py  memory_monitor.py  metrics.py  mqtt_validator.py  runner.py  task.py  visitor.py
camera-framework/camera_framework/bridges/: __init__.py  device_client.py  device_client_old.py  filter_task.py  heartbeat.py  log_task.py  metrics_publisher_old.py  metrics_task.py  mqtt_client.py  mqtt_publish_task.py  registration.py  registration_old.py  snapshot_task.py
camera-framework/camera_framework/cameras/: __init__.py  image_library_camera.py
camera-framework/examples/: memory_monitoring_example.py  metrics_with_memory.py  test_strict_validation.py
camera-framework/tests/: __init__.py  test_buffer_architecture.py  test_smoke.py  test_strict_buffer_validation.py  test_visitor.py
device-sdk/: README.md  pyproject.toml
docs/: API_SETUP.md  CLA.md  CLIP_NORMALIZATION_CHECKPOINT.md  CODEOWNERS  CONCURRENT_PIPELINE_DESIGN.md  CONFIG.md  ENVIRONMENT_DESIGN.md  GOVERNANCE.md  HEARTBEAT_SYSTEM.md  IMAGE_LIBRARY_CAMERA_SUMMARY.md  PIPELINE.md  PIPELINE_CHAT_INTEGRATION.md  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md
examples/: fluent_api_examples.py
macos-device/: NAMED_OUTPUTS_MIGRATION.md  README.md  RUNNER_SCHEDULING_ANALYSIS.md  SMOLVLM_INTEGRATION.md  pyproject.toml
macos-device/diagrams/: pipeline-topology.mmd
macos-device/examples/: test_attributes_pipeline.py
macos-device/macos_device/: __init__.py  __main__.py  alert_publisher.py  attribute_color_filter.py  attribute_enricher.py  camera.py  category_router.py  clusterer.py  color_utils.py  config.py  detection_filter.py  detection_tracker.py  search_filter.py  smolvlm_verifier.py  smolvlm_worker.py  vlm_queue.py  yolo_detector.py
macos-device/macos_device/models/: __init__.py  pa100k_onnx.py  smolvlm_decoder_onnx.py  smolvlm_embed_onnx.py  smolvlm_onnx.py  smolvlm_vision_onnx.py  yolo_tensorrt.py
macos-device/tests/: test_pipeline_integration.py  test_vlm_queue.py
macos-device/utils/: test_camera.py
pipelines/: camera_yolo_clusterer_clip.dsl  camera_yolo_clusterer_fashionclip.dsl  camera_yolo_clusterer_viewer.dsl  camera_yolo_viewer.dsl  clip_detection.dsl  test_camera_stream.dsl  test_clip_simple.dsl  test_debug.dsl  test_detection_labeler.dsl  test_exit_code.dsl  test_history_chat.dsl  test_jetson_camera_yolo.dsl  test_ordered_merge.dsl  test_simple.dsl  test_yolo_clip.dsl
scripts/: copy-smolvlm-models.sh  get_versions.py  install-jetson.sh  install-mobileclip.sh  install-pi.sh  mobileclip-parameters.sh  setup-jetson-camera-venv.sh  setup-pi-camera-venv.sh
(+490 files in other folders)
