[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "camera-framework"
version = "0.1.0"
description = "Lightweight pipeline framework for edge device AI vision applications"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.24.2",
    "paho-mqtt>=1.6.0",
    "cryptography>=41.0.0",
    "psutil>=5.9.0",
    "jsonschema>=4.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
